--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libxi (2:1.7.10-3gestures1) focal; urgency=medium
+
+  * Add gesture support
+
+ -- Povilas Kanapickas <povilas@radix.lt>  Sat, 24 Aug 2019 17:24:06 +0300
+
 libxi (2:1.7.10-0ubuntu1) eoan; urgency=medium
 
   * New upstream version
